# Project-WebBoot

./: README.md
.github/workflows/: build.yml  release.yml
webbboot-companion/: index.html  package-lock.json  package.json
webbboot-companion/.github/workflows/: build.yml
webbboot-companion/src-tauri/: Cargo.toml  tauri.conf.json
webbboot-companion/src-tauri/src/: main.rs
webbboot-companion/temp/usr/share/applications/: WebBoot Companion.desktop
webbboot-web/: README.md  index.html  package-lock.json  package.json
webbboot-web/public/downloads/: webbboot-companion-linux.deb  webbboot-companion-linux.rpm  webbboot-companion-macos.dmg
webbboot-web/src/: App.jsx  styles.css
webbboot-web/src/components/: BootForm.jsx
