[package]
name = "webbboot-companion"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.4.1", features = [] }  # No features needed here
tauri-plugin-shell = "2.0.0"  # Add this for shell commands
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusb = "0.9"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
log = "0.4"
simplelog = "0.12"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
